--- a/MeShow/MeShow/MeShow/Views/MainPage.xaml
+++ b/MeShow/MeShow/MeShow/Views/MainPage.xaml
@@ -2,6 +2,10 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:views="clr-namespace:MeShow.Views"
+            xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
+            android:TabbedPage.ToolbarPlacement="Bottom"
+            android:TabbedPage.BarItemColor="#666666"
+            android:TabbedPage.BarSelectedItemColor="Black"            
             x:Class="MeShow.Views.MainPage">
     <TabbedPage.Children>
         <NavigationPage Title="Browse">
