--- a/Pic98/src/Pic98/wwwroot/css/site.css
+++ b/Pic98/src/Pic98/wwwroot/css/site.css
@@ -1,3 +1,71 @@
-.hello{
-	font-size:1.5em;
+
+.h300{
+	height:300;
 }
+
+.icon30{
+	height:30;
+}
+
+
+.div_red{
+	background-color:red;
+}
+
+.div_blue{
+	background-color:blue;
+}
+
+.div_green{
+	background-color:green;
+}
+
+.div_black{
+	background-color:black;
+}
+
+.wrap-box {   
+  display: -webkit-box;   
+}   
+    
+.flex-inner {   
+    -webkit-box-flex: 1;   
+    display: -webkit-box;   
+}   
+    
+.flex-item {   
+    -webkit-box-flex: 1;   
+    position: relative;   
+}   
+.wrap-6 {   
+      -webkit-box-orient: horizontal;   
+}   
+.wrap-6 .flex-inner {   
+      -webkit-box-flex: 0;   
+      -webkit-box-orient: vertical;   
+}   
+.wrap-6 .flex-inner:first-child {   
+      width: 66.6%;   
+}   
+.wrap-6 .flex-inner:last-child {   
+      width: 33.3%;   
+}   
+.wrap-6 .flex-item {   
+      padding-top: 100%;   
+}   
+.wrap-6 .flex-box2 .flex-item {   
+      padding-top: 50%;   
+}   
+.wrap-6 .flex-box2 {   
+      display: -webkit-box;   
+      -webkit-box-orient: horizontal;   
+}   
+.wrap-6 .flex-inner:first-child,   
+.wrap-6 .flex-box2 .flex-item:first-child {   
+      margin-right: 1px;   
+}   
+.wrap-6 .flex-box1,   
+.wrap-6 .flex-inner:last-child .flex-item:first-child,   
+.wrap-6 .flex-inner:last-child .flex-item:nth-child(2) {   
+      margin-bottom: 1px;   
+}   
