--- a/Pic98/src/Pic98/wwwroot/css/site.css
+++ b/Pic98/src/Pic98/wwwroot/css/site.css
@@ -51,10 +51,10 @@
       width: 33.3%;   
 }   
 .wrap-6 .flex-item {   
-      padding-top: 100%;   
+        
 }   
 .wrap-6 .flex-box2 .flex-item {   
-      padding-top: 50%;   
+        
 }   
 .wrap-6 .flex-box2 {   
       display: -webkit-box;   
@@ -93,4 +93,28 @@
 
 .margin_top30{
 	margin-top:30;
+}
+
+.bbkgnd {
+	background-image:url(../Image/Vip/81313015410.jpg);
+	background-size:100% 100%;
+}
+
+p.image-container {
+  width: 100%;
+  height: 0;
+  padding-bottom: 60%;
+  overflow: hidden;
+}
+
+p.image-container img {
+  width: 100%;
+}
+
+.imgauto{
+	margin-top:0px;
+	width: auto;
+	height: auto;
+	max-width: 100%;
+	max-height: 100%;		
 }
