--- a/Pic98/src/Pic98/wwwroot/css/site.css
+++ b/Pic98/src/Pic98/wwwroot/css/site.css
@@ -7,23 +7,6 @@
 	height:30;
 }
 
-
-.div_red{
-	background-color:red;
-}
-
-.div_blue{
-	background-color:blue;
-}
-
-.div_green{
-	background-color:green;
-}
-
-.div_black{
-	background-color:black;
-}
-
 .wrap-box {   
   display: -webkit-box;   
 }   
@@ -39,7 +22,18 @@
 }   
 .wrap-6 {   
       -webkit-box-orient: horizontal;   
+}  
+.wrap-6 .flex-inner2 {   
+      -webkit-box-flex: 0;   
+      -webkit-box-orient: vertical;   
 }   
+.wrap-6 .flex-inner2:first-child {   
+      width: 49.9%;   
+}   
+.wrap-6 .flex-inner2:last-child {   
+      width: 49.9%;   
+}   
+ 
 .wrap-6 .flex-inner {   
       -webkit-box-flex: 0;   
       -webkit-box-orient: vertical;   
@@ -95,26 +89,39 @@
 	margin-top:30;
 }
 
-.bbkgnd {
-	background-image:url(../Image/Vip/81313015410.jpg);
-	background-size:100% 100%;
-}
-
-p.image-container {
-  width: 100%;
-  height: 0;
-  padding-bottom: 60%;
-  overflow: hidden;
-}
-
-p.image-container img {
-  width: 100%;
-}
-
 .imgauto{
 	margin-top:0px;
 	width: auto;
 	height: auto;
 	max-width: 100%;
 	max-height: 100%;		
+}
+
+.padding3{
+	padding:3px;
+text-align:center
+}
+
+@media (min-width: 576px) {
+    .card-columns {
+        column-count: 2;
+    }
+}
+
+@media (min-width: 768px) {
+    .card-columns {
+        column-count: 3;
+    }
+}
+
+@media (min-width: 992px) {
+    .card-columns {
+        column-count: 4;
+    }
+}
+
+@media (min-width: 1200px) {
+    .card-columns {
+        column-count: 5;
+    }
 }
