--- a/subraC/miniprogram/pages/index/index.wxss
+++ b/subraC/miniprogram/pages/index/index.wxss
@@ -8,9 +8,8 @@ page {
 }
 
 .mapinfo{
-  margin-top: 40rpx;
-  height: 100%;
-  width: 80vh;
+  height: 100vh;
+  width: 100vw;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-left: none;
   border-right: none;
@@ -21,8 +20,9 @@ page {
 }
 
 .controls{
-  height: 12vh;
-  width: 100vh;
+  height: 60px;
+  width: 100vw;
+  background-color: rgb(255, 0, 0,0.5);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-left: none;
   border-right: none;
@@ -32,15 +32,44 @@ page {
   transition: all 300ms ease;
   bottom: 0;
   position: fixed;  
+  justify-content: center;
 }
 
 .time {
-  width: 50vh;
   text-align: center;
   background-color: rgba(0, 0, 0, .5);
   color: white;
   line-height: 50px;
   margin: 0;
-  bottom: 0;
-  position: fixed;    
+}
+
+/*底部按钮*/
+.footer-btn{
+  justify-content: space-around;
+}
+.footer-btn1,.footer-btn2,.footer-btn3,.footer-btn4{
+  font-size: 11pt;
+  color: #FF0000;
+  border: 0rpx solid #999999;
+  border-radius: 8rpx;
+  line-height: 44rpx;
+  margin-top: 8px;
+  margin-bottom: 8px;
+  margin-left: 28px;
+  margin-right: 28px;
+  padding:2px 2px;
+  text-align: center;
+  
+}
+
+.maintabimg {
+  width: 32px;
+  height: 32px;
+  margin: 2px auto;
+}
+
+.maintabimg0 {
+  width: 32px;
+  height: 32px;
+  margin: 2px auto;
 }
