--- a/renrendian/miniprogram/pages/index/index.wxss
+++ b/renrendian/miniprogram/pages/index/index.wxss
@@ -9,7 +9,7 @@ page {
 
 .menu{
   margin: 2px;
-  height: 145rpx;
+  height: 140rpx;
   width: 100vw;
   text-align: center;
   display: flex;
@@ -21,15 +21,14 @@ page {
   margin-top:10rpx;
   margin-left: 32rpx;
   margin-right: 32rpx;  
-  height: 140rpx;
-  
+  height: 130rpx;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   font-size: 11pt;
 }
 
-.menu image{
+.menu .menuitem image{
   width:90rpx;
   height: 90rpx;
   border-radius: 8px;
@@ -163,4 +162,24 @@ page {
   font-size: 24rpx;
   line-height: 36rpx;
   word-break: break-all;
+}
+
+.swiper_ads{
+  height: 120px;
+  width: 100%;
+}
+
+.swiper_ads image{
+  width: 100%;
+  height: 120px;
+}
+
+.swiper_menu{
+  height: 152px;
+  width: 100%;
+}
+
+.swiper_menu image{
+  width: 100%;
+  height: 120px;
 }
