--- a/renrendian/miniprogram/pages/index/index.wxml
+++ b/renrendian/miniprogram/pages/index/index.wxml
@@ -1,33 +1,21 @@
 <!--index.wxml-->
-<swiper class="swiper_ads" indicatorDots='{{indicatorDots}}' current='{{current}}' autoplay='{{autoplay1}}' interval='{{interval}}'duration='{{duration}}' circular='{{circular}}'>
-    <block wx:for='{{bannerUrls}}' wx:key='uuid'>
-    <swiper-item>
-        <image mode="center"  bindtap='swiperitemtap' data-aduri="{{item.goodsuuid}}" src="{{item.imageuri}}" ></image>
-    </swiper-item>
-    </block>
-</swiper>
-
-<!--
-  <swiper indicator-dots autoplay='{{ap}}' interval='2000' duration='800' current='0' >
-    <swiper-item>
-      abc
-    </swiper-item>
-    <swiper-item>
-      def
-    </swiper-item>
+<view class="container">
+  <swiper class="swiper_ads" indicatorDots='{{indicatorDots}}' current='{{current}}' autoplay='{{autoplay1}}' interval='{{interval}}' duration='{{duration}}' circular='{{circular}}'>
+      <block wx:for='{{bannerUrls}}' wx:key='uuid'>
+        <swiper-item>
+          <image mode="center"  bindtap='swiperitemtap' data-aduri="{{item.goodsuuid}}" src="{{item.imageuri}}" ></image>
+        </swiper-item>
+      </block>
   </swiper>
-  -->
 
-
-
-<swiper class="swiper_menu" indicator-dots="true" autoplay="{{ap}}" circular="true">
+  <swiper class="swiper_menu" indicator-dots="true" autoplay="{{ap}}" circular="true">
     <block wx:for='{{bannerMenus}}' wx:key='_id'>
       <swiper-item>
         <block wx:for='{{item.rows}}' wx:key='_id'>
           <view class="menu">
             <block wx:for='{{item.items}}' wx:key='_id'>
-              <view class="menuitem">
-              <image src="{{item.image}}"></image>
+              <view class="menuitem" data-classid='{{item.goodsclass}}' bindtap='swipermenu_tap'>
+                <image src="{{item.image}}"></image>
                 {{item.text}}
               </view>
             </block>
@@ -35,46 +23,111 @@
         </block>
       </swiper-item>
     </block>
-</swiper>
+  </swiper>
 
-<view class="container">
-  <!-- 用户 openid -->
-  <view class="userinfo">
-    <button 
-      open-type="getUserInfo" 
-      bindgetuserinfo="onGetUserInfo"
-      class="userinfo-avatar"
-      style="background-image: url({{avatarUrl}})"
-    ></button>
-    <view>
-      <button class="userinfo-nickname" bindtap="onGetOpenid">点击获取 openid</button>
+  <view class="goodsview">
+    <!-- 热卖商品 -->
+    <view class="hotgoodstitle">
+      <view>热销商品</view>
+      <view style="margin-left:8px;width:60%;">
+      
+      <swiper style="height:15px;"  vertical="true" autoplay='{{autoplay2}}' indicatorDots='{{indicatorDots2}}' current='0' interval='{{interval}}' duration='{{duration}}' circular='{{circular}}'>
+        <block wx:for='{{hotTitleAds}}' wx:key='_id'>
+          <swiper-item>
+            {{item.text}}
+          </swiper-item>
+        </block>
+      </swiper>
+
+      </view>
+    </view>
+    <view class="hotgoods">
+      <view class="hotgoodsitem">
+        <view style="font-size:9pt;margin-left:4px;margin-right:2px;">
+          <image style="width:100%;" src="cloud://renrendian-749a2d.7265-renrendian-749a2d/miniapp_images/xihu.png" mode="widthFix"></image>
+          <view>
+          商品标题详情介绍
+          </view>
+          <view class="cols">
+            <view>加购</view>
+            <text class="font7">300人购买</text>
+           
+          </view>
+        </view>
+      </view>
+      <view class="hotgoodsitem">
+        <view style="font-size:9pt;margin-left:2px;margin-right:4px;">
+          <image style="width:100%;" src="../../images/xihu.png" mode="widthFix"></image>
+          <view>
+          商品标题详情介绍
+          </view>
+          <view class="cols">
+            <view>加购</view>
+            <text class="font7">300人购买</text>
+           
+          </view>   
+        </view>    
+      </view>    
     </view>
   </view>
 
-
-  <!-- 上传图片 -->
-  <view class="uploader">
-    <view class="uploader-text" bindtap="doUpload">
-      <text>上传图片</text>
+    <view class="rgoods">
+      <view class="rgoodsitem" style='margin-left:3px;margin-right:2px;'>
+        <view style="font-size:9pt;">
+          <image style="width:100%;" src="../../images/xihu.png" mode="widthFix"></image>
+          <view class="rgoodsitemintro">
+          商品标题详情介绍
+          </view>
+          <view class="cols">
+            <view>加购</view>
+            <text class="font7">300人购买</text>
+           
+          </view>
+        </view>
+      </view>
+      <view class="rgoodsitem" style='margin-left:2px;margin-right:3px;'>
+        <view style="font-size:9pt;">
+          <image style="width:100%;" src="../../images/xihu.png" mode="widthFix"></image>
+          <view class="rgoodsitemintro">
+          商品标题详情介绍
+          </view>
+          <view class="cols">
+            <view>加购</view>
+            <text class="font7">300人购买</text>
+           
+          </view> 
+        </view>    
+      </view>    
     </view>
-    <view class="uploader-container" wx:if="{{imgUrl}}">
-      <image class="uploader-image" src="{{imgUrl}}" mode="aspectFit" bindtap="previewImg"></image>
-    </view>
-  </view>
 
 
-  <!-- 操作数据库 -->
-  <view class="uploader">
-    <navigator url="../databaseGuide/databaseGuide" open-type="navigate" class="uploader-text">
-      <text>前端操作数据库</text>
-    </navigator>
-  </view>
-
-  <!-- 新建云函数 -->
-  <view class="uploader">
-    <navigator url="../addFunction/addFunction" open-type="navigate" class="uploader-text">
-      <text>快速新建云函数</text>
-    </navigator>
-  </view>
+    <view class="rgoods">
+      <view class="rgoodsitem" style='margin-left:3px;margin-right:2px;'>
+        <view style="font-size:9pt;">
+          <image style="width:100%;" src="../../images/xihu.png" mode="widthFix"></image>
+          <view class="rgoodsitemintro">
+          商品标题详情介绍
+          </view>
+          <view class="cols">
+            <view>加购</view>
+            <text class="font7">300人购买</text>
+           
+          </view>
+        </view>
+      </view>
+      <view class="rgoodsitem" style='margin-left:2px;margin-right:3px;'>
+        <view style="font-size:9pt;">
+          <image style="width:100%;" src="../../images/xihu.png" mode="widthFix"></image>
+          <view class="rgoodsitemintro">
+          商品标题详情介绍
+          </view>
+          <view class="cols">
+            <view>加购</view>
+            <text class="font7">300人购买</text>
+           
+          </view> 
+        </view>    
+      </view>    
+    </view>    
 
 </view>
