--- a/renrendian/miniprogram/pages/index/index.wxss
+++ b/renrendian/miniprogram/pages/index/index.wxss
@@ -18,9 +18,9 @@ page {
 }
 
 .menu .menuitem{
-  margin-top:10rpx;
-  margin-left: 32rpx;
-  margin-right: 32rpx;  
+  padding-top:10rpx;
+  padding-left: 32rpx;
+  padding-right: 32rpx;  
   height: 130rpx;
   display: flex;
   flex-direction: column;
@@ -164,22 +164,121 @@ page {
   word-break: break-all;
 }
 
+.container{
+  width:100vw;
+  margin: 0px;
+  padding:0px;
+  align-content: center;
+  background-color:lightgray;
+}
+
 .swiper_ads{
-  height: 120px;
+  height: 200rpx;
   width: 100%;
+
 }
 
 .swiper_ads image{
   width: 100%;
-  height: 120px;
+  height: 200rpx;
 }
 
 .swiper_menu{
-  height: 152px;
+  height: 290rpx;
   width: 100%;
 }
 
 .swiper_menu image{
   width: 100%;
   height: 120px;
+}
+
+.goodsview{
+  margin-top:8px;
+  padding: 0px;
+  border-radius: 8px;
+  width: 94vw;
+  background-color: white;
+  margin-bottom: 3px;
+}
+
+.hotgoodstitle{
+  padding-left: 6px;
+  padding-top:6px;
+  padding-bottom: 6px;
+  width:100%;
+  height: 35rpx;
+  font-size:10pt;
+  display: flex;
+  flex-direction: row;
+ 
+}
+
+.hotgoods{
+  margin: 0px;
+  padding: 0px;
+  width:100%;
+  height: 400rpx;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
+  box-sizing: border-box;  
+  
+}
+
+.hotgoodsitem{
+  width:47vw;
+  padding-left: 5rpx;
+  padding-right: 5rpx;
+}
+
+.hotgoodsitem image{
+  border-radius: 8px;
+}
+
+.rgoods{
+  margin: 0px;
+  margin-top: 3px;
+  margin-bottom:3px;
+  padding: 0px;
+  width:96vw;
+  height: 450rpx;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
+  box-sizing: border-box;  
+}
+
+.rgoodsitem{
+  width:48vw;
+  background-color: white;
+  border-radius: 8px;
+  padding: 8px;
+}
+
+.rgoodsitem image{
+  border-radius: 8px;
+}
+
+.rgoodsitemintro{
+  height:100rpx;
+  
+}
+
+.cols{
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  
+}
+
+.font7
+{
+  font-size:7pt;
+  margin-top:auto;
+  margin-bottom: 0px;
+  margin-left:auto;
+  margin-right: 8px;
 }
