--- a/renrendian/miniprogram/pages/goods/list.wxml
+++ b/renrendian/miniprogram/pages/goods/list.wxml
@@ -10,7 +10,7 @@
   
     <view class="rgoods">
       <block wx:for='{{goodslist}}' wx:key='_id'>
-        <view class="rgoodsitem" style='margin-left:3px;margin-right:2px;'>
+        <view  bindtap='goodsitemtap' data-aduri='{{item._id}}'  class="rgoodsitem" style='margin-left:3px;margin-right:2px;'>
           <view style="font-size:9pt;">
             <image class="image0" style="width:100%;" src='{{item.logo}}' mode="widthFix"></image>
             <view class="rgoodsitemintro">
