--- a/renrendian/miniprogram/pages/goods/detail.wxss
+++ b/renrendian/miniprogram/pages/goods/detail.wxss
@@ -1,1 +1,15 @@
 /* miniprogram/pages/goods/detail.wxss */
+.container{
+  width:100vw;
+  margin: 0px;
+  padding:0px;
+  align-content: center;
+  
+}
+
+
+.swiper_ads{
+  height: 300rpx;
+  width: 100%;
+
+}
